<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreatTaskFragment">
    <EditText
        android:id="@+id/ed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/little_margin"
        android:autofillHints="phone"
        android:hint="@string/enter_the_text"
        android:textColorHint="@color/black"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_date_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/little_margin"
        android:layout_marginTop="@dimen/little_margin_top"
        android:text="@string/due_date"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/default_text_size"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_text"/>
    <TextView
        android:id="@+id/tv_choose_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/little_margin"
        android:layout_marginTop="@dimen/little_margin_top"
        android:background="@drawable/rectangle"
        android:drawableEnd="@drawable/ic_calendar"
        android:drawablePadding="@dimen/drawable_padding_size"
        android:padding="@dimen/little_padding"
        android:text="@string/_20_08_21"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_hint" />

    <TextView
        android:id="@+id/tv_repeat_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/little_margin"
        android:layout_marginTop="@dimen/little_margin_top"
        android:text="@string/repeat"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/default_text_size"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@+id/tv_choose_repeat"
        app:layout_constraintTop_toBottomOf="@id/ed_text"
        />

    <TextView
        android:id="@+id/tv_choose_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/little_margin"
        android:layout_marginTop="@dimen/little_margin_top"
        android:background="@drawable/rectangle"
        android:drawableEnd="@drawable/ic_down"
        android:drawablePadding="@dimen/drawable_padding_size"
        android:padding="@dimen/little_padding"
        android:text="@string/ewery_week"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_hint" />


        <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/little_margin"
        android:layout_marginTop="@dimen/little_margin_top"
        android:background="@drawable/button_rectangle"
        android:text="@string/and_new_task"
        android:textAllCaps="false"
        android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/back_to_task_list"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintTop_toBottomOf="@+id/btn_apply"/>



</androidx.constraintlayout.widget.ConstraintLayout>

